@@ -1,24 +1,17 @@
 package mc.gouv.xaf.servlet;
 
-import java.net.URL;
-import java.net.URLEncoder;
-import java.time.Duration;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-
-import javax.servlet.annotation.MultipartConfig;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
-import javax.servlet.http.Part;
-
+import com.fasterxml.jackson.databind.ObjectMapper;
+import mc.gouv.vscan.shared.dto.ScanDTO;
+import mc.gouv.vscan.shared.dto.ScanRequestDTO;
+import mc.gouv.xaf.servlet.dto.FileUploadCompteurDTO;
+import mc.gouv.xaf.servlet.dto.FileUploadResponseDTO;
+import mc.gouv.xaf.servlet.dto.UsagerInfosDTO;
+import mc.gouv.xaf.servlet.properties.AfServletGouvPropertiesResolver;
+import mc.gouv.xaf.servlet.util.AppFactoryServletFrontPropertiesCache;
+import mc.gouv.xaf.servlet.util.AppFactoryServletUtils;
+import mc.gouv.xaf.servlet.util.AppFactoryServletUtils.ServiceTarget;
+import mc.gouv.xaf.shared.dto.AccessDTO;
+import mc.gouv.xaf.shared.dto.PropertiesDTO;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.HttpEntity;
@@ -34,39 +27,37 @@ import org.apache.http.impl.client.HttpClientBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-
-import mc.gouv.vscan.shared.dto.ScanDTO;
-import mc.gouv.vscan.shared.dto.ScanRequestDTO;
-import mc.gouv.xaf.servlet.dto.FileUploadCompteurDTO;
-import mc.gouv.xaf.servlet.dto.FileUploadResponseDTO;
-import mc.gouv.xaf.servlet.dto.UsagerInfosDTO;
-import mc.gouv.xaf.servlet.properties.AfServletGouvPropertiesResolver;
-import mc.gouv.xaf.servlet.util.AppFactoryServletFrontPropertiesCache;
-import mc.gouv.xaf.servlet.util.AppFactoryServletUtils;
-import mc.gouv.xaf.servlet.util.AppFactoryServletUtils.ServiceTarget;
-import mc.gouv.xaf.shared.dto.AccessDTO;
-import mc.gouv.xaf.shared.dto.PropertiesDTO;
+import javax.servlet.annotation.MultipartConfig;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
+import javax.servlet.http.Part;
+import java.io.IOException;
+import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.Duration;
+import java.time.LocalDateTime;
+import java.util.*;
 
 /**
- * 
  * Servlet servant à uploader un fichier dans FILE.
- * 
- * @author qdeme
  *
+ * @author qdeme
  */
 @MultipartConfig
 public class FileUploadServlet extends AbstractAfServlet {
 
     private static final long serialVersionUID = 484237515919955392L;
-    private static Logger LOGGER = LoggerFactory.getLogger(FileUploadServlet.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(FileUploadServlet.class);
 
     private static final String EXTENSIONS_WHITELIST = "EXTENSIONS_WHITELIST";
     private static final String MAX_TAILLE_FICHIER = "MAX_TAILLE_FICHIER";
     private static final String VSCAN_ACTIVATION = "VSCAN_ACTIVATION";
 
     // Enregistre l'historique d'upload par session
-    private final static Map<HttpSession, FileUploadCompteurDTO> usagersFileUploadCompteurs = new HashMap<>();
+    private static final Map<HttpSession, FileUploadCompteurDTO> usagersFileUploadCompteurs = new HashMap<>();
+    private static final String SLASH = "/";
 
     // Compteur permettant de trigger un refresh des sessions et supprimer celles qui ne sont plus utilisées
     private static int compteurCleanSessions;
@@ -76,58 +67,39 @@ public class FileUploadServlet extends AbstractAfServlet {
     public void doPost(HttpServletRequest request, HttpServletResponse response) {
         LOGGER.info("====================== /fileupload doPost()");
 
-        UsagerInfosDTO usagerInfosDTO = AppFactoryServletUtils.getLoggedUser(request);
-        if (usagerInfosDTO == null) {
-            response = AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_UNAUTHORIZED,
-                    "Utilisateur non autorisé");
-            return;
-        }
-
-        // Vérification du nombre de fichier uploadés sur la demande
-        LOGGER.info("Vérification du nombre de fichiers déjà uploadés...");
-        HttpSession session = request.getSession();
-        FileUploadCompteurDTO compteurUpload = usagersFileUploadCompteurs.get(session);
-        if (compteurUpload != null) {
-            Duration duration = Duration.between(compteurUpload.getDatePremierUpload(), LocalDateTime.now());
-            int tempsParIntervalle = Integer.parseInt(AfServletGouvPropertiesResolver.getTempsIntervalleUpload());
-            int maxUploadParIntervalle = Integer.parseInt(AfServletGouvPropertiesResolver.getMaxUploadParIntervalle());
-
-            if (compteurUpload.getCompteur() >= maxUploadParIntervalle && duration.toMillis() < tempsParIntervalle) {
-                LOGGER.info("La limite de nombre de fichiers uploadés a été atteinte");
-                AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_METHOD_NOT_ALLOWED,
-                        "Erreur: La limite de nombre de fichiers uploadés a été atteinte");
+        try {
+            UsagerInfosDTO usagerInfosDTO = AppFactoryServletUtils.getLoggedUser(request);
+            if (usagerInfosDTO == null) {
+                AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_UNAUTHORIZED,
+                        "Utilisateur non autorisé");
                 return;
             }
-            else if (duration.toMillis() > tempsParIntervalle) {
-                // Supprimer le compteur en cas de dépassement
-                usagersFileUploadCompteurs.remove(session);
+
+            // Vérification du nombre de fichier uploadés sur la demande
+            LOGGER.info("Vérification du nombre de fichiers déjà uploadés...");
+            HttpSession session = request.getSession();
+            if (verifierNombreFichiers(response, session)) {
+                return;
             }
-        }
 
-        // Récupération du nom du fichier à envoyer
-        String pathInfo = request.getPathInfo();
-        String filename = null;
-        if (pathInfo != null && pathInfo.length() > 1) {
-            filename = pathInfo.split("/")[1];
-        }
+            // Récupération du nom du fichier à envoyer
+            String filename = getFilename(request.getPathInfo());
+            if (StringUtils.isBlank(filename)) {
+                AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_BAD_REQUEST,
+                        "Erreur: nom du fichier manquant");
+                return;
+            }
 
-        if (StringUtils.isBlank(filename)) {
-            AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_BAD_REQUEST,
-                    "Erreur: nom du fichier manquant");
-            return;
-        }
+            // ---  Vérification de la conformité du fichier
+            // Vérification du type du fichier
+            LOGGER.info("Vérification du type pour le fichier {} ...", filename);
+            if (!estExtensionDansWhitelist(filename)) {
+                LOGGER.info("Le type de fichier ne correspond pas aux types whitelistés ({}), pas d'upload dans FILE", getExtensionsWhitelist());
+                AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_FORBIDDEN,
+                        "Erreur: le type/extension du fichier soumis n'est pas valide");
+                return;
+            }
 
-        // ---  Vérification de la conformité du fichier
-        // Vérification du type du fichier
-        LOGGER.info("Vérification du type pour le fichier {} ...", filename);
-        if (!estExtensionDansWhitelist(filename)) {
-            LOGGER.info("Le type de fichier ne correspond pas aux types whitelistés ({}), pas d'upload dans FILE", getExtensionsWhitelist());
-            AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_FORBIDDEN,
-                    "Erreur: le type/extension du fichier soumis n'est pas valide");
-            return;
-        }
-
-        try {
             ObjectMapper mapper = new ObjectMapper();
 
             LOGGER.info("Vérification de la taille...");
@@ -153,42 +125,39 @@ public class FileUploadServlet extends AbstractAfServlet {
             // Appel à VSCAN afin d'effectuer le scan antivirus
             // Constitution de la requête
             boolean activationVscan = Boolean.parseBoolean(propActivationVscan.getValue());
-            LOGGER.info("Activation de VSCAN: " + activationVscan);
+            LOGGER.info("Activation de VSCAN: {}", activationVscan);
 
             if (activationVscan) {
                 LOGGER.info("Appel à VSCAN...");
 
                 String urlVscan = AfServletGouvPropertiesResolver.getVscanUrl();
-                LOGGER.info("URL = " + urlVscan);
+                LOGGER.info("URL = {}", urlVscan);
                 HttpClient clientVscan = HttpClientBuilder.create().build();
                 MultipartEntityBuilder builderVscan = MultipartEntityBuilder.create();
                 builderVscan.addPart("file", new InputStreamBody(part0.getInputStream(), part0.getContentType(), part0.getSubmittedFileName()));
 
                 // Pour tester avec un fichier vérolé (EICAR)
-                //builderVscan.addPart("file", new InputStreamBody(new ByteArrayInputStream("X5O!P%@AP[4\\PZX54(P^)7CC)7}$EICAR-STANDARD-ANTIVIRUS-TEST-FILE!$H+H*".getBytes()), "blason.jpg"));
 
                 ScanRequestDTO scanRequest = new ScanRequestDTO();
                 scanRequest.setCodeAppli(getServletContext().getInitParameter(AppFactoryServletUtils.DEMARCHEID_KEY));
                 scanRequest.setFilename(filename);
-                //scanRequest.setEnduserIpAddress(request.getRemoteAddr());
                 scanRequest.setEnduserAppModule(getServletContext().getInitParameter(AppFactoryServletUtils.DEMARCHEID_KEY).toLowerCase() + "-frontserver");
-                //scanRequest.setEnduserDenomination("Usager " + usagerInfosDTO.getId() + " (" + usagerInfosDTO.getLogin() + ")");
 
                 String scanRequestStr = mapper.writeValueAsString(scanRequest);
                 builderVscan.addPart("scanRequest", new StringBody(scanRequestStr));
                 HttpEntity multipartVscan = builderVscan.build();
-                HttpPost postRequestVscan = new HttpPost(urlVscan.toString());
+                HttpPost postRequestVscan = new HttpPost(urlVscan);
                 postRequestVscan.setEntity(multipartVscan);
                 postRequestVscan.addHeader("Authorization", "Bearer " + AfServletGouvPropertiesResolver.getVscanJwt());
                 HttpResponse postResponseVscan = clientVscan.execute(postRequestVscan);
                 String vscanResp = IOUtils.toString(postResponseVscan.getEntity().getContent());
-                LOGGER.info("VSCAN Response : " + postResponseVscan.getStatusLine() + "(" + vscanResp + ")");
+                LOGGER.info("VSCAN Response : {} ({})", postResponseVscan.getStatusLine(), vscanResp);
 
                 ScanDTO scanDto = mapper.readValue(vscanResp, ScanDTO.class);
 
                 if (!scanDto.isResult()) {
                     LOGGER.info("VSCAN a détecté le fichier comme vérolé, fin du traitement, pas d'upload dans FILE");
-                    response = AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_BAD_REQUEST,
+                    AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_BAD_REQUEST,
                             "Erreur: le fichier soumis semble corrompu");
                     return;
                 }
@@ -198,7 +167,7 @@ public class FileUploadServlet extends AbstractAfServlet {
 
             // Génération de l'UUID
             UUID uuid = AppFactoryServletUtils.generateUUID();
-            LOGGER.debug("UUID généré : {}", uuid.toString());
+            LOGGER.debug("UUID généré : {}", uuid);
 
             String accountId = getServletContext().getInitParameter(AppFactoryServletUtils.DEMARCHEID_KEY);
             String containerId = getServletContext().getInitParameter(AppFactoryServletUtils.CONTAINER_KEY);
@@ -208,21 +177,20 @@ public class FileUploadServlet extends AbstractAfServlet {
             // Récupération de l'AccessID via appel WS à Demarches
             LOGGER.info("Appel à la démarche pour récupérer l'AccessID correspondant..");
 
-            //Integer accessId = AppFactoryServletUtils.getAccessID(demarcheId, usagerInfosDTO.getId());
             AccessDTO access = getAfApiClient().getAccess(usagerInfosDTO.getId());
             Integer accessId = access.getPkAccess();
-            
+
             LOGGER.debug("AccessID = {}", accessId);
 
             if (accessId == null) {
-                response = AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_NOT_FOUND,
+                AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_NOT_FOUND,
                         "Erreur: impossible de récupérer l'accès");
                 return;
             }
 
             // Constitution du chemin virtuel du fichier
             // /appfactory/demarcheId/accessId/UUID/nomDuFichier
-            String virtualPath = "/" + accountId + "/" + containerId + "/" + accessId + "/" + uuid + "/" + URLEncoder.encode(filename, "UTF-8");
+            String virtualPath = SLASH + accountId + SLASH + containerId + SLASH + accessId + SLASH + uuid + SLASH + URLEncoder.encode(filename, StandardCharsets.UTF_8);
             LOGGER.info("Chemin virtuel : {}", virtualPath);
 
             // Constitution de l'URL d'appel
@@ -230,14 +198,7 @@ public class FileUploadServlet extends AbstractAfServlet {
             LOGGER.info("URL d'appel : {}", url);
 
             // Extraction du demandeId si le client le connaît déjà et l'a fourni à AFS
-            String demandeId = null;
-            Enumeration<String> headers = request.getHeaderNames();
-            while (headers.hasMoreElements()) {
-                String headerName = headers.nextElement();
-                if (headerName.startsWith(AppFactoryServletUtils.FILE_METADATA_DEMANDEID)) {
-                    demandeId = request.getHeader(headerName);
-                }
-            }
+            String demandeId = extraireDemandeId(request);
 
             // Constitution de la requête
             HttpClient client = HttpClientBuilder.create().build();
@@ -263,45 +224,88 @@ public class FileUploadServlet extends AbstractAfServlet {
 
             // Constitution de la réponse en redirigeant la réponse du WS ansi que son code réponse
             LOGGER.info("Constitution de la réponse pour retour au client");
-            response.setContentType("application/json");
 
-            int statusCode = postResponse.getStatusLine().getStatusCode();
-            response.setStatus(statusCode);
+            this.constituerReponse(response, filename, uuid, accessId, postResponse);
 
-            if (statusCode == HttpServletResponse.SC_OK || statusCode == HttpServletResponse.SC_CREATED) {
-                // Si tout s'est bien passé, alors on forme une réponse différente que celle qui nous est retournée par
-                // FILE
-                response.setContentType("application/json");
-                mapper = new ObjectMapper();
-                // Répondre accessId/uuid/nomDuFichier
-                FileUploadResponseDTO responseObj = new FileUploadResponseDTO(accessId + "/" + uuid + "/" + filename);
-                String responseStr = mapper.writeValueAsString(responseObj);
-                response.getOutputStream().write(responseStr.getBytes());
-            } else {
-                LOGGER.error("Status code : {}", statusCode);
-                // S'il y a eu un problème, alors on retourne le message d'erreur au client
-                IOUtils.copy(postResponse.getEntity().getContent(), response.getOutputStream());
+            // Supression des sessions inutilisées chaque 10 requêtes d'upload
+            if (compteurCleanSessions > 50) {
+                reinitialierSessionsInutilisees();
             }
 
+            // Ajout dans l'historique par session
+            ajouterCompteurUpload(session);
+
         } catch (Exception e) {
-            response = AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_INTERNAL_SERVER_ERROR,
-                    "Erreur interne: ", e);
+            LOGGER.error("FileUploadServlet - Une erreur est survenue lors de l'appel à la méthode POST", e);
+            int codeStatut = getCodeErreur(e);
+            response.setStatus(codeStatut);
         }
-
-        // Supression des sessions inutilisées chaque 10 requêtes d'upload
-        if (compteurCleanSessions > 50) {
-            reinitialierSessionsInutilisees();
-        }
-
-        // Ajout dans l'historique par session
-        ajouterCompteurUpload(session);
 
         LOGGER.info("====================== Fin /fileupload doPost()");
     }
 
-    private boolean estExtensionDansWhitelist (String filename) {
+    private boolean verifierNombreFichiers(HttpServletResponse response, HttpSession session) {
+        FileUploadCompteurDTO compteurUpload = usagersFileUploadCompteurs.get(session);
+        if (compteurUpload != null) {
+            Duration duration = Duration.between(compteurUpload.getDatePremierUpload(), LocalDateTime.now());
+            int tempsParIntervalle = Integer.parseInt(AfServletGouvPropertiesResolver.getTempsIntervalleUpload());
+            int maxUploadParIntervalle = Integer.parseInt(AfServletGouvPropertiesResolver.getMaxUploadParIntervalle());
+
+            if (compteurUpload.getCompteur() >= maxUploadParIntervalle && duration.toMillis() < tempsParIntervalle) {
+                LOGGER.info("La limite de nombre de fichiers uploadés a été atteinte");
+                AppFactoryServletUtils.logAndSendError(LOGGER, response, HttpStatus.SC_METHOD_NOT_ALLOWED,
+                        "Erreur: La limite de nombre de fichiers uploadés a été atteinte");
+                return true;
+            } else if (duration.toMillis() > tempsParIntervalle) {
+                // Supprimer le compteur en cas de dépassement
+                usagersFileUploadCompteurs.remove(session);
+            }
+        }
+        return false;
+    }
+
+    private String extraireDemandeId(HttpServletRequest request) {
+        String demandeId = null;
+        Enumeration<String> headers = request.getHeaderNames();
+        while (headers.hasMoreElements()) {
+            String headerName = headers.nextElement();
+            if (headerName.startsWith(AppFactoryServletUtils.FILE_METADATA_DEMANDEID)) {
+                demandeId = request.getHeader(headerName);
+            }
+        }
+        return demandeId;
+    }
+
+    private void constituerReponse(HttpServletResponse response, String filename, UUID uuid, Integer accessId, HttpResponse postResponse) throws IOException {
+        response.setContentType("application/json");
+        int statusCode = postResponse.getStatusLine().getStatusCode();
+        response.setStatus(statusCode);
+        if (statusCode == HttpServletResponse.SC_OK || statusCode == HttpServletResponse.SC_CREATED) {
+            // Si tout s'est bien passé, alors on forme une réponse différente que celle qui nous est retournée par
+            // FILE
+            ObjectMapper mapper = new ObjectMapper();
+            // Répondre accessId/uuid/nomDuFichier
+            FileUploadResponseDTO responseObj = new FileUploadResponseDTO(accessId + SLASH + uuid + SLASH + filename);
+            String responseStr = mapper.writeValueAsString(responseObj);
+            response.getOutputStream().write(responseStr.getBytes());
+        } else {
+            LOGGER.error("Status code : {}", statusCode);
+            // S'il y a eu un problème, alors on retourne le message d'erreur au client
+            IOUtils.copy(postResponse.getEntity().getContent(), response.getOutputStream());
+        }
+    }
+
+    private String getFilename(String pathInfo) {
+        String filename = null;
+        if (pathInfo != null && pathInfo.length() > 1) {
+            filename = pathInfo.split(SLASH)[1];
+        }
+        return filename;
+    }
+
+    private boolean estExtensionDansWhitelist(String filename) {
         String[] filenameSplit = filename.split("\\.");
-        String fileExtension = filenameSplit[filenameSplit.length-1].toLowerCase();
+        String fileExtension = filenameSplit[filenameSplit.length - 1].toLowerCase();
         return getExtensionsWhitelist().contains(fileExtension);
     }
 
@@ -310,8 +314,8 @@ public class FileUploadServlet extends AbstractAfServlet {
         List<String> extensions = new ArrayList<>();
         PropertiesDTO extensionsProperty = AppFactoryServletFrontPropertiesCache.getFrontProperty(EXTENSIONS_WHITELIST);
 
-        if(extensionsProperty != null) {
-            String propertyString = extensionsProperty.getValue().replace("*.","").replace(" ","");
+        if (extensionsProperty != null) {
+            String propertyString = extensionsProperty.getValue().replace("*.", "").replace(" ", "");
             String[] types = propertyString.split(",");
             Collections.addAll(extensions, types);
         }
@@ -319,7 +323,7 @@ public class FileUploadServlet extends AbstractAfServlet {
         return extensions;
     }
 
-    private synchronized static void ajouterCompteurUpload(HttpSession session) {
+    private static synchronized void ajouterCompteurUpload(HttpSession session) {
         FileUploadCompteurDTO compteurUpload = usagersFileUploadCompteurs.get(session);
         if (compteurUpload == null) {
             compteurUpload = new FileUploadCompteurDTO();
@@ -334,10 +338,10 @@ public class FileUploadServlet extends AbstractAfServlet {
 
     /**
      * Methode qui parcours toutes les sessions stockées et supprime les entrées qui ne servent plus. ex:
-     *      Une session dont la date du premier upload > x secondes
+     * Une session dont la date du premier upload > x secondes
      */
-    private synchronized static void reinitialierSessionsInutilisees() {
-        for(Iterator<Map.Entry<HttpSession, FileUploadCompteurDTO>> it = usagersFileUploadCompteurs.entrySet().iterator(); it.hasNext(); ) {
+    private static synchronized void reinitialierSessionsInutilisees() {
+        for (Iterator<Map.Entry<HttpSession, FileUploadCompteurDTO>> it = usagersFileUploadCompteurs.entrySet().iterator(); it.hasNext(); ) {
             Map.Entry<HttpSession, FileUploadCompteurDTO> entry = it.next();
             LocalDateTime datePremierUpload = entry.getValue().getDatePremierUpload();
             Duration duration = Duration.between(datePremierUpload, LocalDateTime.now());
